# magellan-reference

./: Makefile  magellan.tex
contents/: assertion.tex  introduction.tex  option.tex  test_case.tex
examples/quantity/: CMakeLists.txt
examples/quantity/include/quantity/: Amount.h  Length.h
examples/quantity/src/quantity/: Length.cpp
examples/quantity/test/: main.cpp
examples/quantity/test/quantity/: LengthTest.cpp
style/: coding.tex
